# ai-invoice-extraction-engine

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/api/: export.py  extract.py  history.py  parse.py  upload.py
app/models/: invoice.py
app/services/: ai_parser.py  currency_normalizer.py  duplicate_detector.py  export_service.py  ocr_extractor.py  pdf_extractor.py
app/utils/: file_store.py  file_utils.py
streamlit_app/: app.py  dashboard.py
